fix: langchain versions corrected

--- a/services/classifier-service/requirements.txt
+++ b/services/classifier-service/requirements.txt
@@ -1,24 +1,24 @@
 # Core Framework
-langgraph==0.0.20
-langchain==0.1.0
-langchain-core==0.1.0
+langgraph==0.2.16
+langchain==0.3.13
+langchain-core==0.3.28
 
 # LLM Providers (install all, use one at runtime)
-langchain-google-genai==1.0.0  # For Gemini
-langchain-openai==0.1.0         # For OpenAI
-langchain-anthropic==0.1.0      # For Anthropic
+langchain-google-genai==2.0.8
+langchain-openai==0.2.14
+langchain-anthropic==0.3.7
 
 # Provider SDKs
-google-generativeai==0.3.0
-anthropic==0.18.0
-openai==1.10.0
+google-generativeai==0.8.3
+anthropic==0.39.0
+openai==1.57.4
 
 # Configuration
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic==2.10.5
+pydantic-settings==2.7.0
 
 # Utilities
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 
 # Async
-httpx==0.26.0
+httpx==0.28.1
