--- a/services/classifier-service/Dockerfile
+++ b/services/classifier-service/Dockerfile
@@ -2,7 +2,7 @@
 # Multi-stage build for smaller image size
 
 # ============= Builder Stage =============
-FROM python:3.11-slim as builder
+FROM python:3.11-slim AS builder
 
 # Set working directory
 WORKDIR /app
