--- a/services/classifier-service/requirements.txt
+++ b/services/classifier-service/requirements.txt
@@ -1,24 +1,16 @@
-# Core Framework
-langgraph==0.2.16
-langchain==0.3.13
-langchain-core==0.3.28
+# Core Framework (let pip resolve compatibility)
+langgraph>=0.2.0,<0.3.0
+langchain>=0.2.0,<0.3.0
+langchain-core>=0.2.0,<0.3.0
 
-# LLM Providers (install all, use one at runtime)
-langchain-google-genai==2.0.8
-langchain-openai==0.2.14
-langchain-anthropic==0.3.7
-
-# Provider SDKs
-google-generativeai==0.8.3
-anthropic==0.39.0
-openai==1.57.4
+# LLM Providers
+langchain-google-genai>=1.0.0,<2.0.0
+google-generativeai>=0.7.0
 
 # Configuration
-pydantic==2.10.5
-pydantic-settings==2.7.0
+pydantic>=2.9.0
+pydantic-settings>=2.5.0
 
 # Utilities
-python-dotenv==1.0.1
-
-# Async
-httpx==0.28.1
+python-dotenv>=1.0.0
+httpx>=0.27.0
