--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,32 @@
 services:
+  # ============= API Gateway =============
+  api-gateway:
+    build:
+      context: ./services/api-gateway
+      dockerfile: Dockerfile
+    container_name: email-api-gateway
+    environment:
+      SERVICE_NAME: api-gateway
+      SERVICE_VERSION: 1.0.0
+      PORT: 8000
+      CLASSIFIER_SERVICE_URL: http://classifier:8001
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+    ports:
+      - "8000:8000"  # Expose to host machine
+    volumes:
+      - ./services/api-gateway:/app
+      - ./shared:/app/shared
+    restart: unless-stopped
+    networks:
+      - email-intelligence-net
+    depends_on:
+      - classifier  # Wait for classifier to start
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+
   # ============= Classifier Service =============
   classifier:
     build:
@@ -6,49 +34,29 @@ services:
       dockerfile: Dockerfile
     container_name: email-classifier
     environment:
-      # LLM Configuration
       LLM_PROVIDER: ${LLM_PROVIDER:-gemini}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
       MODEL_NAME: ${MODEL_NAME:-gemini-2.0-flash-exp}
       MAX_TOKENS: ${MAX_TOKENS:-1000}
       TEMPERATURE: ${TEMPERATURE:-0.0}
-      
-      # Thresholds
       HIGH_CONFIDENCE_THRESHOLD: ${HIGH_CONFIDENCE_THRESHOLD:-0.75}
       LOW_CONFIDENCE_THRESHOLD: ${LOW_CONFIDENCE_THRESHOLD:-0.50}
-      
-      # Logging
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
-    
-    # Mount code for development (hot reload)
+    expose:
+      - "8001"  # Only accessible within Docker network
     volumes:
       - ./services/classifier-service:/app
       - ./shared:/app/shared
-    
-    # Restart policy
     restart: unless-stopped
-    
-    # Network
     networks:
       - email-intelligence-net
-    
-    # Resource limits (optional but good practice)
     deploy:
       resources:
         limits:
           cpus: '1.0'
           memory: 512M
-        reservations:
-          cpus: '0.5'
-          memory: 256M
 
-# ============= Networks =============
 networks:
   email-intelligence-net:
     driver: bridge
     name: email-intelligence-network
-
-# ============= Volumes (for later - database) =============
-volumes:
-  postgres_data:
-    name: email-intelligence-db
