--- a/services/api-gateway/requirements.txt
+++ b/services/api-gateway/requirements.txt
@@ -8,6 +8,7 @@ httpx==0.27.2
 # Shared models (we'll reference from shared/)
 pydantic==2.9.2
 pydantic-settings==2.5.2
+email-validator==2.1.0
 
 # Utilities
 python-dotenv==1.0.1
