--- a/services/vector-db-service/Dockerfile
+++ b/services/vector-db-service/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile for API Gateway Service
+# Dockerfile for Vector DB Service
 # Multi-stage build for smaller image size
 
 # ============= Builder Stage =============
@@ -6,12 +6,16 @@ FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    g++ \
     && rm -rf /var/lib/apt/lists/*
 
+# Copy requirements first (for layer caching)
 COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir --user -r requirements.txt
 
 # ============= Runtime Stage =============
@@ -19,26 +23,25 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install curl for health checks and debugging
-RUN apt-get update && apt-get install -y --no-install-recommends curl \
-    && rm -rf /var/lib/apt/lists/*
-
 # Copy Python packages from builder
 COPY --from=builder /root/.local /root/.local
+
+# Make sure scripts in .local are usable
 ENV PATH=/root/.local/bin:$PATH
 
 # Copy application code
 COPY ./app ./app
+COPY ./data ./data
 
-# Environment
+# Set Python to run in unbuffered mode (logs appear immediately)
 ENV PYTHONUNBUFFERED=1
 
 # Expose port
-EXPOSE 8000
+EXPOSE 8003
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import httpx; httpx.get('http://localhost:8000/health')" || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD python -c "import httpx; httpx.get('http://localhost:8003/health')" || exit 1
 
 # Run FastAPI with uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8003"]
