--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     environment:
       LLM_PROVIDER: ${LLM_PROVIDER:-gemini}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
-      MODEL_NAME: ${MODEL_NAME:-gemini-2.0-flash-exp}
+      MODEL_NAME: ${MODEL_NAME:-gemini-2.5-flash}
       MAX_TOKENS: ${MAX_TOKENS:-1000}
       TEMPERATURE: ${TEMPERATURE:-0.0}
       HIGH_CONFIDENCE_THRESHOLD: ${HIGH_CONFIDENCE_THRESHOLD:-0.75}
