feat: Add RAG integration for low-confidence classifications
  - Add VectorDBClient to query similar examples from vector-db-service
  - Integrate RAG into reanalyze workflow node with few-shot examples
  - Simplify threshold logic: single CONFIDENCE_THRESHOLD (0.75)
  - Classifications below threshold trigger RAG-enhanced re-analysis
  - Update classifier to depend on vector-db-service in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
     restart: unless-stopped
     networks:
       - email-intelligence-net
+    depends_on:
+      - vector-db-service  # Wait for RAG service to be available
     deploy:
       resources:
         limits:
