--- a/services/classifier-service/.env.example
+++ b/services/classifier-service/.env.example
@@ -16,9 +16,12 @@ MODEL_NAME=gemini-2.5-flash
 MAX_TOKENS=1000
 TEMPERATURE=0.0
 
-# Classification Thresholds
-HIGH_CONFIDENCE_THRESHOLD=0.75
-LOW_CONFIDENCE_THRESHOLD=0.50
+# Classification Threshold (below this triggers RAG)
+CONFIDENCE_THRESHOLD=0.75
+
+# RAG Configuration
+VECTOR_DB_URL=http://vector-db-service:8003
+RAG_EXAMPLES_COUNT=3
 
 # Logging
 LOG_LEVEL=INFO
