feat: Added System and unit test for each service and for the general project

--- a/.gitignore
+++ b/.gitignore
@@ -57,5 +57,6 @@ logs/
 # Temporary tests
 test_classifier.py
 **/test_*.py
-!tests/test_*.py
+!services/**/tests/**/test_*.py
+!tests/**/test_*.py
 .claude/
